--- a/mvrtlib/src/main/res/layout/toolbar.xml
+++ b/mvrtlib/src/main/res/layout/toolbar.xml
@@ -4,4 +4,4 @@
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    app:theme="@style/Toolbar" />
+    android:theme="@style/Toolbar" />
