--- a/mvrtlib/src/main/res/values/colors.xml
+++ b/mvrtlib/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <color name="text_primary_dark">#424242</color>
     <color name="text_secondary_dark">#757575</color>
     <color name="text_primary_light">#f5f5f5</color>
+    <color name="text_secondary_light">#E0E0E0</color>
+
+    <color name="alliance_red">#C62828</color>
+    <color name="alliance_blue">#283593</color>
 </resources>
