--- a/scout/src/main/res/layout/dialog_code_verification.xml
+++ b/scout/src/main/res/layout/dialog_code_verification.xml
@@ -3,13 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:id="@+id/verification_enter"
             android:hint="Verification Code"
             android:singleLine="true"
             android:inputType="text"/>
+    </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
