--- a/scout/src/main/res/layout/fragment_stand_scout_teleop.xml
+++ b/scout/src/main/res/layout/fragment_stand_scout_teleop.xml
@@ -137,7 +137,7 @@
                     android:layout_margin="5dp"
                     android:text="Put noodle in container"
                     android:id="@+id/scout_button_noodle_bin"
-                    style="@style/mvrt_button"/>
+                    style="@style/MVRTButtonStyle"/>
                 <Button
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -145,7 +145,7 @@
                     android:layout_margin="5dp"
                     android:text="Move noodle to landfill"
                     android:id="@+id/scout_button_noodle_landfill"
-                    style="@style/mvrt_button"/>
+                    style="@style/MVRTButtonStyle"/>
             </LinearLayout>
 
             <CheckBox
