--- a/scout/src/main/res/layout/fragment_standscout_auton.xml
+++ b/scout/src/main/res/layout/fragment_standscout_auton.xml
@@ -20,17 +20,17 @@
                 android:text="Starting Position"
                 android:textSize="18sp"/>
 
-                <RadioGroup android:id="@+id/scout_auton_start_radio"
+                <RadioGroup android:id="@+id/autonscout_start_radio"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <RadioButton android:id="@+id/scout_auton_start_staging"
+                    <RadioButton android:id="@+id/autonscout_start_staging"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Near Staging Area"/>
 
-                    <RadioButton android:id="@+id/scout_auton_start_landfill"
+                    <RadioButton android:id="@+id/autonscout_start_landfill"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Near Landfill"/>
@@ -44,12 +44,12 @@
                 android:text="Bins/Totes"
                 android:textSize="18sp"/>
 
-                <CheckBox android:id="@+id/scout_auton_bins_checkbox"
+                <CheckBox android:id="@+id/autonscout_bins_checkbox"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Did they grab bins from the step?"/>
 
-                <EditText android:id="@+id/scout_auton_bins_number"
+                <EditText android:id="@+id/autonscout_bins_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
@@ -58,13 +58,13 @@
                     android:visibility="gone" />
 
             <!-- Yellow Totes Question -->
-            <CheckBox android:id="@+id/scout_auton_totes_yellow"
+            <CheckBox android:id="@+id/autonscout_totes_yellow"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Did they pick up yellow totes?"/>
 
 
-                <EditText android:id="@+id/scout_auton_yellow_number"
+                <EditText android:id="@+id/autonscout_yellow_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="How many? (1-3)"
@@ -72,7 +72,7 @@
                     android:inputType="number"
                     android:visibility="gone" />
 
-                <CheckBox android:id="@+id/scout_auton_totes_interact"
+                <CheckBox android:id="@+id/autonscout_totes_interact"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Did they interact with or stack grey totes?"/>
@@ -84,12 +84,12 @@
                 android:text="Mobility"
                 android:textSize="18sp"/>
 
-                <CheckBox android:id="@+id/scout_auton_mobility"
+                <CheckBox android:id="@+id/autonscout_mobility"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Did they end in the auton zone?"/>
 
-                <CheckBox android:id="@+id/scout_auton_interfere"
+                <CheckBox android:id="@+id/autonscout_interfere"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Did they interfere with other robots?"/>
@@ -101,7 +101,7 @@
                 android:text="Other"
                 android:textSize="18sp"/>
 
-                <CheckBox android:id="@+id/scout_auton_noshow"
+                <CheckBox android:id="@+id/autonscout_noshow"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Were they a no-show?"/>
