--- a/scout/src/main/res/layout/fragment_standscout_teleop.xml
+++ b/scout/src/main/res/layout/fragment_standscout_teleop.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:text="+1 (Feeder)"
                     android:layout_margin="5dp"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/teleop_button_tote_landfill"
                     android:layout_width="0dp"
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="+1 (Landfill)"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/teleop_button_tote_lost"
                     android:layout_width="0dp"
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="-1"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
             </LinearLayout>
 
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:text="New Stack"
                     android:layout_margin="5dp"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/teleop_button_stack_attack"
                     android:layout_width="0dp"
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="Knocked Over"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
             </LinearLayout>
 
@@ -99,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="Cap a stack"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/teleop_button_can_step"
                     android:layout_width="0dp"
@@ -107,15 +107,15 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="Get Can From Step"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/teleop_button_can_flip"
                     android:layout_width="0dp"
                     android:layout_weight="2"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Flip a Container"
-                    style="@style/MVRTButtonStyle"/>
+                    android:text="Flip a Bin"
+                    android:theme="@style/MVRTButtonStyle"/>
 
             </LinearLayout>
 
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="Put noodle in container"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
                 <Button android:id="@+id/teleop_button_noodle_landfill"
                     android:layout_width="0dp"
@@ -145,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="Move noodle to landfill"
-                    style="@style/MVRTButtonStyle"/>
+                    android:theme="@style/MVRTButtonStyle"/>
 
             </LinearLayout>
 
