--- a/superscout/src/main/res/layout/fragment_start_scan.xml
+++ b/superscout/src/main/res/layout/fragment_start_scan.xml
@@ -4,13 +4,22 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:layout_marginTop="300dp"
+    android:layout_marginTop="300dp"
+    android:layout_marginStart="80dp"
+    android:layout_width="200dp"
+    android:layout_height="90dp"
+    android:theme="@style/MVRTButtonStyle"
+    android:id="@+id/getdata_qrbutton"
+    android:src="@drawable/qrcode"
+    android:elevation="4dp"/>
+
+    <Button
         android:layout_marginStart="80dp"
         android:layout_width="200dp"
         android:layout_height="90dp"
         android:theme="@style/MVRTButtonStyle"
-        android:id="@+id/getdata_qrbutton"
-        android:src="@drawable/qrcode"
+        android:id="@+id/finish"
+        android:text="finish"
         android:elevation="4dp"/>
 
 </LinearLayout>
