--- a/superscout/src/main/res/layout/fragment_start_match.xml
+++ b/superscout/src/main/res/layout/fragment_start_match.xml
@@ -26,31 +26,19 @@
             android:id="@+id/startmatch_settingsindicator"
             android:textSize="8pt"/>
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:id="@+id/startmatch_matchtype"
-                android:layout_weight="1"></Spinner>
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="2">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/startmatch_matchno"
-                    android:hint="Match Number"
-                    android:inputType="number"
-                    android:singleLine="true"/>
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
+                android:id="@+id/startmatch_matchno"
+                android:hint="Match Number"
+                android:inputType="number"
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="fill_parent"
@@ -93,6 +81,51 @@
                 android:singleLine="true"
                 android:inputType="number"/>
         </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:id="@+id/startmatch_defense1"
+                android:src="@mipmap/a1"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:id="@+id/startmatch_defense2"
+                android:src="@mipmap/b1"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:id="@+id/startmatch_defense3"
+                android:src="@mipmap/c1"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:id="@+id/startmatch_defense4"
+                android:src="@mipmap/d1"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="Edit"
+                android:id="@+id/startmatch_editdefenses"
+                android:layout_weight="2"/>
+        </LinearLayout>
 
     </LinearLayout>
 
